--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,29 +1,21 @@
-#JPA
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=default
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-
-
-
-spring.datasource.url=jdbc:mysql://localhost/projects_tasks
-spring.datasource.username=adel
+# PostgreSQL DataSource Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/projects_tasks
+spring.datasource.username=postgres
 spring.datasource.password=adel156651
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.mvc.view.prefix=src/main/resources/templates/login
-spring.mvc.view.suffix=.html
-
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Flyway Configuration
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
-#spring.flyway.baselineOnMigrate = true
 spring.flyway.out-of-order=true
 
-
+# MVC Configuration
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
-#logging.level.org.springframework.security=DEBUG
